have matplotlib rendering of hyperbolic polygon worked out for more cases

--- a/scripts/hyperbolic_test.ipynb
+++ b/scripts/hyperbolic_test.ipynb
@@ -99,11 +99,11 @@
     "    e_list = [Line.from_points(*pt_list[i], *pt_list[(i + 1) % p]) for i in range(p)]\n",
     "    return Polygon(e_list, join=True)\n",
     "\n",
-    "def draw_poly(poly, color=\"#ffffff\"):\n",
+    "def draw_poly(d, poly, color=\"#ffffff\"):\n",
     "    d.draw(poly, fill=color, opacity=0.25)\n",
     "    d.draw(poly, hwidth=(0.0,0.05), fill='blue')\n",
     "    \n",
-    "def draw_points(p_list):\n",
+    "def draw_points(d, p_list):\n",
     "    for pt in p_list:\n",
     "        d.draw(pt, hradius=0.15, hwidth=0.02,\n",
     "                   fill='white', opacity=0.9)\n",
@@ -138,11 +138,11 @@
     "        polygons.append(transformed_polygon)\n",
     "   \n",
     "    for polygon in polygons:\n",
-    "        draw_poly(polygon)\n",
+    "        draw_poly(d, polygon)\n",
     "        \n",
-    "    # draw_points(p_list)\n",
+    "    # draw_points(d, p_list)\n",
     "    # for pt_list2 in pt_list_list:\n",
-    "    #     draw_points(pt_list2)\n",
+    "    #     draw_points(d, pt_list2)\n",
     "\n",
     "    return polygons\n",
     "    \n",
@@ -165,12 +165,12 @@
     "    trans = Transform.merge(offset, rot_trans)\n",
     "    pt_list = trans.apply_to_list(pt_list)\n",
     "    poly = Polygon.from_vertices(pt_list)\n",
-    "    draw_poly(poly)\n",
+    "    draw_poly(d, poly)\n",
     "\n",
     "    polygons = ring(p, q, i0=0, i1=p, polygon_center_src=poly)\n",
     "\n",
     "    # TODO(lucasw) need to avoid drawing the same shape twice\n",
-    "    if True:\n",
+    "    if False:\n",
     "        for polygon in polygons:\n",
     "            polygons = ring(p, q, 1, 4, polygon)\n",
     "            for polygon in polygons:\n",
@@ -198,37 +198,65 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
+    "from hyperbolic.euclid import Arc, Line\n",
+    "\n",
+    "def get_poly_xy(poly):\n",
+    "    xs = []\n",
+    "    ys = []\n",
+    "    for edge in poly.edges:\n",
+    "        arc = edge.proj_shape\n",
+    "        if isinstance(arc, Arc):\n",
+    "            num = 8\n",
+    "            for i in range(num):  # for deg in np.arange(arc.start_deg, arc.end_deg, 1.0):\n",
+    "                # Arc ought to have a convenience function for this\n",
+    "                # clockwise\n",
+    "                if arc.cw:\n",
+    "                    d0 = arc.start_deg\n",
+    "                    d1 = arc.end_deg\n",
+    "                    if d1 < d0:\n",
+    "                        d1 += 360\n",
+    "                else:\n",
+    "                    d0 = arc.start_deg\n",
+    "                    d1 = arc.end_deg\n",
+    "                    if d1 > d0:\n",
+    "                        d1 -= 360\n",
+    "                    \n",
+    "                deg = d0 + i * (d1 - d0) / num\n",
+    "                x = arc.cx + arc.r * math.cos(math.radians(deg))\n",
+    "                y = arc.cy + arc.r * math.sin(math.radians(deg))\n",
+    "                xs.append(x)\n",
+    "                ys.append(y)\n",
+    "        elif isinstance(arc, Line):\n",
+    "            xs.append(arc.x1)\n",
+    "            ys.append(arc.y1)\n",
+    "        else:\n",
+    "            print(type(arc))\n",
+    "        # pt0 = edge.start_point()\n",
+    "        # xs.append(pt0.x)\n",
+    "        # ys.append(pt0.y)\n",
+    "        # pt0 = edge.midpoint_euclid()\n",
+    "        # xs.append(pt0.x)\n",
+    "        # ys.append(pt0.y)\n",
+    "\n",
+    "    xs.append(xs[0])\n",
+    "    ys.append(ys[0])\n",
+    "    \n",
+    "    return xs, ys\n",
+    "\n",
     "# print(pt_list)\n",
+    "\n",
+    "xs, ys = get_poly_xy(poly)\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "\n",
     "for pt in pt_list:\n",
     "    ax.plot(pt.x, pt.y, 'o')\n",
     "    \n",
-    "xs = []\n",
-    "ys = []\n",
-    "for edge in poly.edges:\n",
-    "    arc = edge.proj_shape\n",
-    "    for i in range(10):  # for deg in np.arange(arc.start_deg, arc.end_deg, 1.0):\n",
-    "        # Arc ought to have a convenience function for this\n",
-    "        deg = arc.start_deg + i * (arc.end_deg - arc.start_deg) / 10.0\n",
-    "        x = arc.cx + arc.r * math.cos(math.radians(deg))\n",
-    "        y = arc.cy + arc.r * math.sin(math.radians(deg))\n",
-    "        xs.append(x)\n",
-    "        ys.append(y)\n",
-    "    # pt0 = edge.start_point()\n",
-    "    # xs.append(pt0.x)\n",
-    "    # ys.append(pt0.y)\n",
-    "    # pt0 = edge.midpoint_euclid()\n",
-    "    # xs.append(pt0.x)\n",
-    "    # ys.append(pt0.y)\n",
-    "    \n",
-    "xs.append(xs[0])\n",
-    "ys.append(ys[0])\n",
+    "\n",
     "# print(xs)\n",
     "# print(ys)\n",
     "    \n",
-    "ax.plot(xs, ys)\n",
+    "ax.plot(xs, ys, '.')\n",
     "ax.axis('equal')"
    ]
   },
@@ -261,6 +289,59 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0a37014e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, name, parent=None, parent_side=None, p=5, q=4):\n",
+    "        self.name = name\n",
+    "        self.parent = parent\n",
+    "        \n",
+    "        # TODO(lucasw) this is the same for every polygon\n",
+    "        vertices = construct_poly_vertices(p, q)\n",
+    "        # use the first edge as the shift origin\n",
+    "        t0 = vertices[0]\n",
+    "        t1 = vertices[1]\n",
+    "        transform = Transform.shift_origin(t0, t1)\n",
+    "        \n",
+    "        if self.parent is not None:\n",
+    "            t0 = parent.polygon.vertices[(parent_side + 1) % p]\n",
+    "            t1 = parent.polygon.vertices[parent_side]\n",
+    "            trans_to_side = Transform.translation(t0, t1)\n",
+    "            transform = Transform.merge(transform, trans_to_side)\n",
+    "        transformed_vertices = transform.apply_to_list(vertices)\n",
+    "        self.polygon = Polygon.from_vertices(transformed_vertices)\n",
+    "        \n",
+    "nodes = {}\n",
+    "nodes[0] = Node(name=0)\n",
+    "nodes[1] = Node(name=1, parent=nodes[0], parent_side=0)\n",
+    "nodes[2] = Node(name=2, parent=nodes[0], parent_side=1)\n",
+    "nodes[3] = Node(name=3, parent=nodes[0], parent_side=2)\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "for node in nodes.values():\n",
+    "    xs, ys = get_poly_xy(node.polygon)\n",
+    "    ax.plot(xs, ys)\n",
+    "\n",
+    "ax.axis('equal')\n",
+    "\n",
+    "if False:\n",
+    "    # TODO(lucasw) this isn't working\n",
+    "    drawing = Drawing(2.1, 2.1, origin='center')\n",
+    "    drawing.draw(euclid.Circle(0, 0, 1), fill='#f9f9f9')\n",
+    "    drawing.draw(root.polygon, fill=\"blue\", opacity=1.0)\n",
+    "    print(drawing)\n",
+    "    drawing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "074a218d",
    "metadata": {},
    "outputs": [],
    "source": []
