recursively adding children nodes in tree, but want to make this breadth not depth first

--- a/scripts/hyperbolic_test.ipynb
+++ b/scripts/hyperbolic_test.ipynb
@@ -293,9 +293,18 @@
    "outputs": [],
    "source": [
     "class Node:\n",
-    "    def __init__(self, name, parent=None, parent_side=None, p=5, q=4):\n",
+    "    \"\"\"construct a tree of polygon nodes\n",
+    "    avoid creating the same \n",
+    "    \"\"\"\n",
+    "    def __init__(self, name, depth, max_depth=1, parent=None, parent_side=None, p=5, q=4):\n",
     "        self.name = name\n",
+    "        \n",
+    "        self.neighbors = {}\n",
+    "        for i in range(p):\n",
+    "            self.neighbors[i] = None\n",
+    "        \n",
     "        self.parent = parent\n",
+    "        self.neighbors[0] = parent\n",
     "        \n",
     "        # TODO(lucasw) this is the same for every polygon\n",
     "        vertices = construct_poly_vertices(p, q)\n",
@@ -312,20 +321,31 @@
     "        transformed_vertices = transform.apply_to_list(vertices)\n",
     "        self.polygon = Polygon.from_vertices(transformed_vertices)\n",
     "        \n",
-    "nodes = {}\n",
-    "nodes[0] = Node(name=0)\n",
-    "nodes[1] = Node(name=1, parent=nodes[0], parent_side=0)\n",
-    "nodes[2] = Node(name=2, parent=nodes[0], parent_side=1)\n",
-    "nodes[3] = Node(name=3, parent=nodes[0], parent_side=2)\n",
+    "        self.children = {}\n",
+    "        if depth >= max_depth:\n",
+    "            return\n",
+    "        \n",
+    "        for i in range(p):\n",
+    "            if self.neighbors[i] is not None:\n",
+    "                continue\n",
+    "            node = Node(name=i, depth=depth + 1, max_depth=max_depth, parent=self, parent_side=i)\n",
+    "            self.children[i] = node\n",
+    "            self.neighbors[i] = node\n",
+    "    \n",
+    "    def plot_recursive(self, ax):\n",
+    "        xs, ys = get_poly_xy(self.polygon)\n",
+    "        ax.plot(xs, ys)\n",
+    "        for child in self.children.values():\n",
+    "            child.plot_recursive(ax)\n",
+    "\n",
+    "root = Node(name=0, depth=0, max_depth=1)\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "\n",
-    "for node in nodes.values():\n",
-    "    xs, ys = get_poly_xy(node.polygon)\n",
-    "    ax.plot(xs, ys)\n",
+    "root.plot_recursive(ax)\n",
     "\n",
     "ax.axis('equal')\n",
     "\n",
@@ -341,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "074a218d",
+   "id": "17a47557",
    "metadata": {},
    "outputs": [],
    "source": []
