trying to detect if a node has already been added if it is already a neighbor of an adjacent node, but not working yet- getting the src_ind isn't even working right

--- a/scripts/hyperbolic_test.ipynb
+++ b/scripts/hyperbolic_test.ipynb
@@ -296,8 +296,10 @@
     "    \"\"\"construct a tree of polygon nodes\n",
     "    avoid creating the same \n",
     "    \"\"\"\n",
-    "    def __init__(self, name, depth, max_depth=1, parent=None, parent_side=None, p=5, q=4):\n",
+    "    def __init__(self, name, depth, parent=None, parent_side=None, p=5, q=4):\n",
     "        self.name = name\n",
+    "        self.depth = depth\n",
+    "        self.p = p\n",
     "        \n",
     "        self.neighbors = {}\n",
     "        for i in range(p):\n",
@@ -322,23 +324,92 @@
     "        self.polygon = Polygon.from_vertices(transformed_vertices)\n",
     "        \n",
     "        self.children = {}\n",
-    "        if depth >= max_depth:\n",
-    "            return\n",
+    "    \n",
+    "    def get_ind(self, src):\n",
+    "        \"\"\"return index of node in neighbors, if it is a neighbor\"\"\"\n",
+    "        for ind, node in enumerate(self.neighbors):\n",
+    "            if node == src:\n",
+    "                return ind    \n",
+    "        print(f\"{src} not a neighbor of {self}\")\n",
+    "        return None\n",
     "        \n",
+    "    def get_left(self, src):\n",
+    "        \"\"\"get the neighbor node to the left of the src node\n",
+    "        \"\"\"\n",
+    "        src_ind = self.get_ind(src)\n",
+    "        if src_ind is None:\n",
+    "            return None\n",
+    "        \n",
+    "        # TODO(lucasw) which is actually left and which is actually right?\n",
+    "        # maybe if consistent it won't matter\n",
+    "        left_i = (src_ind - 1) % self.p    \n",
+    "        left = self.neighbors[left_ind]\n",
+    "        return left\n",
+    "        \n",
+    "    def get_right(self, src):\n",
+    "        src_ind = self.get_ind(src)\n",
+    "        if src_ind is None:\n",
+    "            return None\n",
+    "        \n",
+    "        right_i = (src_ind + 1) % self.p\n",
+    "        right = self.neighbors[right_ind]\n",
+    "        return right\n",
+    "    \n",
+    "    def get_left_left(self, src):\n",
+    "        \"\"\"get the left neighbor of the left neighbor from the entrypoint of src\"\"\"\n",
+    "        left = self.get_left(src)\n",
+    "        if left is None:\n",
+    "            return None\n",
+    "        left_left = left.get_left(self)\n",
+    "        return left_left\n",
+    "    \n",
+    "    def get_right_right(self, src):\n",
+    "        \"\"\"get the right neighbor of the right neighbor from the entrypoint of src\"\"\"\n",
+    "        right = self.get_right(src)\n",
+    "        if right is None:\n",
+    "            return None\n",
+    "        right_right = right.get_right(self)\n",
+    "        return right_right\n",
+    "    \n",
+    "    def add_children(self):\n",
     "        for i in range(p):\n",
     "            if self.neighbors[i] is not None:\n",
     "                continue\n",
-    "            node = Node(name=i, depth=depth + 1, max_depth=max_depth, parent=self, parent_side=i)\n",
+    "            left_i = (i - 1) % self.p\n",
+    "            left = self.neighbors[left_i]\n",
+    "            if left is not None:\n",
+    "                left3 = left.get_left_left(self)\n",
+    "                if left3 is not None:\n",
+    "                    self.neighbors[i] = left3\n",
+    "                    continue\n",
+    "                    \n",
+    "            right_i = (i + 1) % self.p\n",
+    "            right = self.neighbors[right_i]\n",
+    "            if right is not None:\n",
+    "                right3 = right.get_right_right(self)\n",
+    "                if right3 is not None:\n",
+    "                    self.neighbors[i] = right3\n",
+    "                    continue\n",
+    "            \n",
+    "            node = Node(name=i, depth=self.depth + 1, parent=self, parent_side=i)\n",
     "            self.children[i] = node\n",
     "            self.neighbors[i] = node\n",
-    "    \n",
+    "        return self.children.values()\n",
+    "            \n",
     "    def plot_recursive(self, ax):\n",
     "        xs, ys = get_poly_xy(self.polygon)\n",
     "        ax.plot(xs, ys)\n",
     "        for child in self.children.values():\n",
     "            child.plot_recursive(ax)\n",
+    "            \n",
     "\n",
-    "root = Node(name=0, depth=0, max_depth=1)\n",
+    "root = Node(name=0, depth=0)\n",
+    "children = []\n",
+    "children.extend(root.add_children())\n",
+    "\n",
+    "# grand_children = []\n",
+    "# for child in children:\n",
+    "#     grand_children.extend(child.add_children())\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -361,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17a47557",
+   "id": "39010566",
    "metadata": {},
    "outputs": [],
    "source": []
