now have breadth first neighbor adding, and bilateral links between neighbors, and avoiding of duplicates

--- a/scripts/hyperbolic_test.ipynb
+++ b/scripts/hyperbolic_test.ipynb
@@ -289,12 +289,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0a37014e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "class Node:\n",
     "    \"\"\"construct a tree of polygon nodes\n",
-    "    avoid creating the same \n",
+    "    avoid creating the same polygon in the same position when adding children\n",
     "    \"\"\"\n",
     "    def __init__(self, name, depth, parent=None, parent_side=None, p=5, q=4):\n",
     "        self.name = name\n",
@@ -324,13 +326,25 @@
     "        self.polygon = Polygon.from_vertices(transformed_vertices)\n",
     "        \n",
     "        self.children = {}\n",
+    "        \n",
+    "    def neighbor_names(self):\n",
+    "        text = \"[\"\n",
+    "        for ind, neighbor in self.neighbors.items():\n",
+    "            text += f\"{ind}\"\n",
+    "            if neighbor is None:\n",
+    "                text += \" None, \"\n",
+    "            else:\n",
+    "                text += f\" '{neighbor.name}', \"  # {id(neighbor):0x},\"\n",
+    "        text += \"]\"\n",
+    "        return text\n",
     "    \n",
     "    def get_ind(self, src):\n",
     "        \"\"\"return index of node in neighbors, if it is a neighbor\"\"\"\n",
-    "        for ind, node in enumerate(self.neighbors):\n",
+    "        for ind, node in self.neighbors.items():\n",
+    "            # print(f\"{id(node)} {id(src)} {id(node) == id(src)}\")\n",
     "            if node == src:\n",
     "                return ind    \n",
-    "        print(f\"{src} not a neighbor of {self}\")\n",
+    "        print(f\"{src.name} {id(src):0x} not a neighbor of {self.name} {self.neighbor_names()}\")\n",
     "        return None\n",
     "        \n",
     "    def get_left(self, src):\n",
@@ -338,78 +352,107 @@
     "        \"\"\"\n",
     "        src_ind = self.get_ind(src)\n",
     "        if src_ind is None:\n",
-    "            return None\n",
+    "            return None, None\n",
     "        \n",
     "        # TODO(lucasw) which is actually left and which is actually right?\n",
     "        # maybe if consistent it won't matter\n",
-    "        left_i = (src_ind - 1) % self.p    \n",
+    "        left_ind = (src_ind - 1) % self.p    \n",
     "        left = self.neighbors[left_ind]\n",
-    "        return left\n",
+    "        if left is None:\n",
+    "            return None, None\n",
+    "        ind_from_left = left.get_ind(self)\n",
+    "        return left, ind_from_left\n",
     "        \n",
     "    def get_right(self, src):\n",
+    "        \"\"\"get the neighbor node to the right of the src node\n",
+    "        \"\"\"\n",
     "        src_ind = self.get_ind(src)\n",
     "        if src_ind is None:\n",
-    "            return None\n",
+    "            return None, None\n",
     "        \n",
-    "        right_i = (src_ind + 1) % self.p\n",
+    "        right_ind = (src_ind + 1) % self.p\n",
     "        right = self.neighbors[right_ind]\n",
-    "        return right\n",
+    "        if right is None:\n",
+    "            return None, None\n",
+    "        ind_from_right = right.get_ind(self)\n",
+    "        return right, ind_from_right\n",
     "    \n",
     "    def get_left_left(self, src):\n",
     "        \"\"\"get the left neighbor of the left neighbor from the entrypoint of src\"\"\"\n",
-    "        left = self.get_left(src)\n",
+    "        left, _ = self.get_left(src)\n",
     "        if left is None:\n",
-    "            return None\n",
-    "        left_left = left.get_left(self)\n",
-    "        return left_left\n",
+    "            return None, None\n",
+    "        left_left, ind_from_left_left = left.get_left(self)\n",
+    "        return left_left, ind_from_left_left\n",
     "    \n",
     "    def get_right_right(self, src):\n",
     "        \"\"\"get the right neighbor of the right neighbor from the entrypoint of src\"\"\"\n",
-    "        right = self.get_right(src)\n",
+    "        right, _ = self.get_right(src)\n",
     "        if right is None:\n",
-    "            return None\n",
-    "        right_right = right.get_right(self)\n",
-    "        return right_right\n",
+    "            return None, None\n",
+    "        right_right, ind_from_right_right = right.get_right(self)\n",
+    "        return right_right, ind_from_right_right\n",
     "    \n",
-    "    def add_children(self):\n",
+    "    def add_children(self, prefix=\"c\"):\n",
+    "        # print(f\"{self.name} add children\")\n",
     "        for i in range(p):\n",
     "            if self.neighbors[i] is not None:\n",
+    "                # print(f\"{i} existing neighbor {self.neighbors[i].name}\")\n",
     "                continue\n",
     "            left_i = (i - 1) % self.p\n",
     "            left = self.neighbors[left_i]\n",
     "            if left is not None:\n",
-    "                left3 = left.get_left_left(self)\n",
+    "                # print(f\"{self.name} {i} {left_i} {left.name} get left left\")\n",
+    "                left3, ind_from_left3 = left.get_left_left(self)\n",
     "                if left3 is not None:\n",
     "                    self.neighbors[i] = left3\n",
+    "                    left3.neighbors[(ind_from_left3 - 1) % p] = self\n",
     "                    continue\n",
     "                    \n",
     "            right_i = (i + 1) % self.p\n",
     "            right = self.neighbors[right_i]\n",
     "            if right is not None:\n",
-    "                right3 = right.get_right_right(self)\n",
+    "                # print(f\"{self.name} {i} get right right\")\n",
+    "                right3, ind_from_right3 = right.get_right_right(self)\n",
     "                if right3 is not None:\n",
     "                    self.neighbors[i] = right3\n",
+    "                    right3.neighbors[(ind_from_right3 + 1) % p] = self\n",
     "                    continue\n",
     "            \n",
-    "            node = Node(name=i, depth=self.depth + 1, parent=self, parent_side=i)\n",
+    "            node = Node(name=f\"{prefix}{i}\", depth=self.depth + 1, parent=self, parent_side=i)\n",
     "            self.children[i] = node\n",
     "            self.neighbors[i] = node\n",
     "        return self.children.values()\n",
     "            \n",
     "    def plot_recursive(self, ax):\n",
+    "        text = f\"{self.name}, neighbors: \"\n",
+    "        text += self.neighbor_names()\n",
+    "        if self.parent is not None:\n",
+    "            text += f\" parent: {self.parent.name}\"\n",
+    "        print(text)\n",
     "        xs, ys = get_poly_xy(self.polygon)\n",
     "        ax.plot(xs, ys)\n",
     "        for child in self.children.values():\n",
     "            child.plot_recursive(ax)\n",
     "            \n",
     "\n",
-    "root = Node(name=0, depth=0)\n",
+    "root = Node(name=\"root\", depth=0)\n",
     "children = []\n",
-    "children.extend(root.add_children())\n",
+    "children.extend(root.add_children(\"a\"))\n",
+    "print(len(children))\n",
     "\n",
-    "# grand_children = []\n",
-    "# for child in children:\n",
-    "#     grand_children.extend(child.add_children())\n",
+    "grand_children = []\n",
+    "for i, child in enumerate(children):\n",
+    "    prefix = f\"b{i}\"\n",
+    "    grand_children.extend(child.add_children(prefix))\n",
+    "print(len(grand_children))\n",
+    "\n",
+    "if False:\n",
+    "    great_grand_children = []\n",
+    "    for i, child in enumerate(grand_children):\n",
+    "        prefix = f\"c{i}\"\n",
+    "        great_grand_children.extend(child.add_children(prefix))\n",
+    "    print(len(great_grand_children))\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -432,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39010566",
+   "id": "afb8718f",
    "metadata": {},
    "outputs": [],
    "source": []
