can shift the origin polygon now, and have labels for each polygon

--- a/scripts/hyperbolic_test.ipynb
+++ b/scripts/hyperbolic_test.ipynb
@@ -298,7 +298,7 @@
     "    \"\"\"construct a tree of polygon nodes\n",
     "    avoid creating the same polygon in the same position when adding children\n",
     "    \"\"\"\n",
-    "    def __init__(self, name, depth, parent=None, parent_side=None, p=5, q=4):\n",
+    "    def __init__(self, name, depth=0, offset_transform=None, parent=None, parent_side=None, p=5, q=4):\n",
     "        self.name = name\n",
     "        self.depth = depth\n",
     "        self.p = p\n",
@@ -309,22 +309,36 @@
     "        \n",
     "        self.parent = parent\n",
     "        self.neighbors[0] = parent\n",
-    "        \n",
+    "\n",
     "        # TODO(lucasw) this is the same for every polygon\n",
     "        vertices = construct_poly_vertices(p, q)\n",
-    "        # use the first edge as the shift origin\n",
-    "        t0 = vertices[0]\n",
-    "        t1 = vertices[1]\n",
-    "        transform = Transform.shift_origin(t0, t1)\n",
-    "        \n",
+    "            \n",
+    "        transform = Transform.identity()\n",
     "        if self.parent is not None:\n",
+    "\n",
+    "            # use the first edge as the shift origin\n",
+    "            t0 = vertices[0]\n",
+    "            t1 = vertices[1]\n",
+    "            transform = Transform.shift_origin(t0, t1)\n",
+    "        \n",
     "            t0 = parent.polygon.vertices[(parent_side + 1) % p]\n",
     "            t1 = parent.polygon.vertices[parent_side]\n",
     "            trans_to_side = Transform.translation(t0, t1)\n",
     "            transform = Transform.merge(transform, trans_to_side)\n",
+    "        if offset_transform is not None:\n",
+    "             transform = Transform.merge(transform, offset_transform)\n",
+    "\n",
     "        transformed_vertices = transform.apply_to_list(vertices)\n",
     "        self.polygon = Polygon.from_vertices(transformed_vertices)\n",
     "        \n",
+    "        self.xs, self.ys = get_poly_xy(self.polygon)\n",
+    "        minx = np.min(self.xs)\n",
+    "        miny = np.min(self.ys)\n",
+    "        maxx = np.max(self.xs)\n",
+    "        maxy = np.max(self.ys)\n",
+    "        self.cx = minx + 0.5 * (maxx - minx)\n",
+    "        self.cy = miny + 0.5 * (maxy - miny)\n",
+    "\n",
     "        self.children = {}\n",
     "        \n",
     "    def neighbor_names(self):\n",
@@ -430,13 +444,16 @@
     "        if self.parent is not None:\n",
     "            text += f\" parent: {self.parent.name}\"\n",
     "        print(text)\n",
-    "        xs, ys = get_poly_xy(self.polygon)\n",
-    "        ax.plot(xs, ys)\n",
+    "        ax.plot(self.xs, self.ys)\n",
+    "        ax.text(self.cx, self.cy, self.name, fontsize=6)\n",
     "        for child in self.children.values():\n",
     "            child.plot_recursive(ax)\n",
     "            \n",
     "\n",
-    "root = Node(name=\"root\", depth=0)\n",
+    "root_rot = Transform.rotation(deg=90)\n",
+    "root_offset = Transform.translation(Point(0.0, 0.0))\n",
+    "root_transform = Transform.merge(root_offset, root_rot)\n",
+    "root = Node(name=\"root\", offset_transform=root_transform)\n",
     "children = []\n",
     "children.extend(root.add_children(\"a\"))\n",
     "print(len(children))\n",
@@ -475,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afb8718f",
+   "id": "a0aafcfa",
    "metadata": {},
    "outputs": [],
    "source": []
