--- a/scripts/hyperbolic_test.ipynb
+++ b/scripts/hyperbolic_test.ipynb
@@ -13,32 +13,9 @@
     "import drawsvg as draw\n",
     "from drawsvg import Drawing\n",
     "from hyperbolic import euclid, util\n",
-    "from hyperbolic.poincare import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f97ffa17",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def hyp_poly_edge_construct(p, q):\n",
-    "    pi, pi2 = math.pi, math.pi*2\n",
-    "    th = pi2/q\n",
-    "    phi = pi2/p\n",
-    "    ang1 = pi-phi/2-th/2-pi/2\n",
-    "    ang2 = th/2 + pi/2\n",
-    "    a = math.sin(ang2)/math.sin(ang1)\n",
-    "    b = math.sin(phi/2)/math.sin(ang1)\n",
-    "    r_p = math.sqrt(1/(a**2-b**2))\n",
-    "    r_c = a*r_p\n",
-    "    r_from_c = b*r_p\n",
-    "    #return r_c, r_from_c\n",
-    "    t1 = pi - math.asin(r_c / (r_from_c / math.sin(phi/2)))\n",
-    "    t2 = pi - t1 - phi/2\n",
-    "    r = math.sin(t2) * (r_from_c / math.sin(phi/2))\n",
-    "    return r"
+    "from hyperbolic.poincare import *\n",
+    "\n",
+    "from poincare_plane import get_poly_xy, Node"
    ]
   },
   {
@@ -48,6 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from poincare_plane import hyp_poly_edge_construct\n",
+    "\n",
     "p = 5\n",
     "corner_deg = 90\n",
     "q = 360 / corner_deg\n",
@@ -87,17 +66,7 @@
    },
    "outputs": [],
    "source": [
-    "def construct_poly_vertices(p, q, deg_offset=0, skip=1):\n",
-    "    r = hyp_poly_edge_construct(p, q)\n",
-    "    return [\n",
-    "        Point.from_polar_euclid(r, deg=-skip * i * 360 / p + deg_offset)\n",
-    "        for i in range(p)\n",
-    "    ]\n",
-    "\n",
-    "def construct_poly_from_points(pt_list):\n",
-    "    p = len(p_list)\n",
-    "    e_list = [Line.from_points(*pt_list[i], *pt_list[(i + 1) % p]) for i in range(p)]\n",
-    "    return Polygon(e_list, join=True)\n",
+    "from poincare_plane import construct_poly_vertices\n",
     "\n",
     "def draw_poly(d, poly, color=\"#ffffff\"):\n",
     "    d.draw(poly, fill=color, opacity=0.25)\n",
@@ -198,51 +167,6 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "from hyperbolic.euclid import Arc, Line\n",
-    "\n",
-    "def get_poly_xy(poly):\n",
-    "    xs = []\n",
-    "    ys = []\n",
-    "    for edge in poly.edges:\n",
-    "        arc = edge.proj_shape\n",
-    "        if isinstance(arc, Arc):\n",
-    "            num = 8\n",
-    "            for i in range(num):  # for deg in np.arange(arc.start_deg, arc.end_deg, 1.0):\n",
-    "                # Arc ought to have a convenience function for this\n",
-    "                # clockwise\n",
-    "                if arc.cw:\n",
-    "                    d0 = arc.start_deg\n",
-    "                    d1 = arc.end_deg\n",
-    "                    if d1 < d0:\n",
-    "                        d1 += 360\n",
-    "                else:\n",
-    "                    d0 = arc.start_deg\n",
-    "                    d1 = arc.end_deg\n",
-    "                    if d1 > d0:\n",
-    "                        d1 -= 360\n",
-    "                    \n",
-    "                deg = d0 + i * (d1 - d0) / num\n",
-    "                x = arc.cx + arc.r * math.cos(math.radians(deg))\n",
-    "                y = arc.cy + arc.r * math.sin(math.radians(deg))\n",
-    "                xs.append(x)\n",
-    "                ys.append(y)\n",
-    "        elif isinstance(arc, Line):\n",
-    "            xs.append(arc.x1)\n",
-    "            ys.append(arc.y1)\n",
-    "        else:\n",
-    "            print(type(arc))\n",
-    "        # pt0 = edge.start_point()\n",
-    "        # xs.append(pt0.x)\n",
-    "        # ys.append(pt0.y)\n",
-    "        # pt0 = edge.midpoint_euclid()\n",
-    "        # xs.append(pt0.x)\n",
-    "        # ys.append(pt0.y)\n",
-    "\n",
-    "    xs.append(xs[0])\n",
-    "    ys.append(ys[0])\n",
-    "    \n",
-    "    return xs, ys\n",
-    "\n",
     "# print(pt_list)\n",
     "\n",
     "xs, ys = get_poly_xy(poly)\n",
@@ -294,162 +218,6 @@
    },
    "outputs": [],
    "source": [
-    "class Node:\n",
-    "    \"\"\"construct a tree of polygon nodes\n",
-    "    avoid creating the same polygon in the same position when adding children\n",
-    "    \"\"\"\n",
-    "    def __init__(self, name, depth=0, offset_transform=None, parent=None, parent_side=None, p=5, q=4):\n",
-    "        self.name = name\n",
-    "        self.depth = depth\n",
-    "        self.p = p\n",
-    "        \n",
-    "        self.neighbors = {}\n",
-    "        for i in range(p):\n",
-    "            self.neighbors[i] = None\n",
-    "        \n",
-    "        self.parent = parent\n",
-    "        self.neighbors[0] = parent\n",
-    "\n",
-    "        # TODO(lucasw) this is the same for every polygon\n",
-    "        vertices = construct_poly_vertices(p, q)\n",
-    "            \n",
-    "        transform = Transform.identity()\n",
-    "        if self.parent is not None:\n",
-    "\n",
-    "            # use the first edge as the shift origin\n",
-    "            t0 = vertices[0]\n",
-    "            t1 = vertices[1]\n",
-    "            transform = Transform.shift_origin(t0, t1)\n",
-    "        \n",
-    "            t0 = parent.polygon.vertices[(parent_side + 1) % p]\n",
-    "            t1 = parent.polygon.vertices[parent_side]\n",
-    "            trans_to_side = Transform.translation(t0, t1)\n",
-    "            transform = Transform.merge(transform, trans_to_side)\n",
-    "        if offset_transform is not None:\n",
-    "             transform = Transform.merge(transform, offset_transform)\n",
-    "\n",
-    "        transformed_vertices = transform.apply_to_list(vertices)\n",
-    "        self.polygon = Polygon.from_vertices(transformed_vertices)\n",
-    "        \n",
-    "        self.xs, self.ys = get_poly_xy(self.polygon)\n",
-    "        minx = np.min(self.xs)\n",
-    "        miny = np.min(self.ys)\n",
-    "        maxx = np.max(self.xs)\n",
-    "        maxy = np.max(self.ys)\n",
-    "        self.cx = minx + 0.5 * (maxx - minx)\n",
-    "        self.cy = miny + 0.5 * (maxy - miny)\n",
-    "\n",
-    "        self.children = {}\n",
-    "        \n",
-    "    def neighbor_names(self):\n",
-    "        text = \"[\"\n",
-    "        for ind, neighbor in self.neighbors.items():\n",
-    "            text += f\"{ind}\"\n",
-    "            if neighbor is None:\n",
-    "                text += \" None, \"\n",
-    "            else:\n",
-    "                text += f\" '{neighbor.name}', \"  # {id(neighbor):0x},\"\n",
-    "        text += \"]\"\n",
-    "        return text\n",
-    "    \n",
-    "    def get_ind(self, src):\n",
-    "        \"\"\"return index of node in neighbors, if it is a neighbor\"\"\"\n",
-    "        for ind, node in self.neighbors.items():\n",
-    "            # print(f\"{id(node)} {id(src)} {id(node) == id(src)}\")\n",
-    "            if node == src:\n",
-    "                return ind    \n",
-    "        print(f\"{src.name} {id(src):0x} not a neighbor of {self.name} {self.neighbor_names()}\")\n",
-    "        return None\n",
-    "        \n",
-    "    def get_left(self, src):\n",
-    "        \"\"\"get the neighbor node to the left of the src node\n",
-    "        \"\"\"\n",
-    "        src_ind = self.get_ind(src)\n",
-    "        if src_ind is None:\n",
-    "            return None, None\n",
-    "        \n",
-    "        # TODO(lucasw) which is actually left and which is actually right?\n",
-    "        # maybe if consistent it won't matter\n",
-    "        left_ind = (src_ind - 1) % self.p    \n",
-    "        left = self.neighbors[left_ind]\n",
-    "        if left is None:\n",
-    "            return None, None\n",
-    "        ind_from_left = left.get_ind(self)\n",
-    "        return left, ind_from_left\n",
-    "        \n",
-    "    def get_right(self, src):\n",
-    "        \"\"\"get the neighbor node to the right of the src node\n",
-    "        \"\"\"\n",
-    "        src_ind = self.get_ind(src)\n",
-    "        if src_ind is None:\n",
-    "            return None, None\n",
-    "        \n",
-    "        right_ind = (src_ind + 1) % self.p\n",
-    "        right = self.neighbors[right_ind]\n",
-    "        if right is None:\n",
-    "            return None, None\n",
-    "        ind_from_right = right.get_ind(self)\n",
-    "        return right, ind_from_right\n",
-    "    \n",
-    "    def get_left_left(self, src):\n",
-    "        \"\"\"get the left neighbor of the left neighbor from the entrypoint of src\"\"\"\n",
-    "        left, _ = self.get_left(src)\n",
-    "        if left is None:\n",
-    "            return None, None\n",
-    "        left_left, ind_from_left_left = left.get_left(self)\n",
-    "        return left_left, ind_from_left_left\n",
-    "    \n",
-    "    def get_right_right(self, src):\n",
-    "        \"\"\"get the right neighbor of the right neighbor from the entrypoint of src\"\"\"\n",
-    "        right, _ = self.get_right(src)\n",
-    "        if right is None:\n",
-    "            return None, None\n",
-    "        right_right, ind_from_right_right = right.get_right(self)\n",
-    "        return right_right, ind_from_right_right\n",
-    "    \n",
-    "    def add_children(self, prefix=\"c\"):\n",
-    "        # print(f\"{self.name} add children\")\n",
-    "        for i in range(p):\n",
-    "            if self.neighbors[i] is not None:\n",
-    "                # print(f\"{i} existing neighbor {self.neighbors[i].name}\")\n",
-    "                continue\n",
-    "            left_i = (i - 1) % self.p\n",
-    "            left = self.neighbors[left_i]\n",
-    "            if left is not None:\n",
-    "                # print(f\"{self.name} {i} {left_i} {left.name} get left left\")\n",
-    "                left3, ind_from_left3 = left.get_left_left(self)\n",
-    "                if left3 is not None:\n",
-    "                    self.neighbors[i] = left3\n",
-    "                    left3.neighbors[(ind_from_left3 - 1) % p] = self\n",
-    "                    continue\n",
-    "                    \n",
-    "            right_i = (i + 1) % self.p\n",
-    "            right = self.neighbors[right_i]\n",
-    "            if right is not None:\n",
-    "                # print(f\"{self.name} {i} get right right\")\n",
-    "                right3, ind_from_right3 = right.get_right_right(self)\n",
-    "                if right3 is not None:\n",
-    "                    self.neighbors[i] = right3\n",
-    "                    right3.neighbors[(ind_from_right3 + 1) % p] = self\n",
-    "                    continue\n",
-    "            \n",
-    "            node = Node(name=f\"{prefix}{i}\", depth=self.depth + 1, parent=self, parent_side=i)\n",
-    "            self.children[i] = node\n",
-    "            self.neighbors[i] = node\n",
-    "        return self.children.values()\n",
-    "            \n",
-    "    def plot_recursive(self, ax):\n",
-    "        text = f\"{self.name}, neighbors: \"\n",
-    "        text += self.neighbor_names()\n",
-    "        if self.parent is not None:\n",
-    "            text += f\" parent: {self.parent.name}\"\n",
-    "        print(text)\n",
-    "        ax.plot(self.xs, self.ys)\n",
-    "        ax.text(self.cx, self.cy, self.name, fontsize=6)\n",
-    "        for child in self.children.values():\n",
-    "            child.plot_recursive(ax)\n",
-    "            \n",
-    "\n",
     "root_rot = Transform.rotation(deg=90)\n",
     "root_offset = Transform.translation(Point(0.0, 0.0))\n",
     "root_transform = Transform.merge(root_offset, root_rot)\n",
