converting poincare points to the hyperboloid they were projected from in jupyter notebook

--- a/scripts/hyperbolic_test.ipynb
+++ b/scripts/hyperbolic_test.ipynb
@@ -174,9 +174,8 @@
     "fig, ax = plt.subplots()\n",
     "\n",
     "for pt in pt_list:\n",
-    "    ax.plot(pt.x, pt.y, 'o')\n",
+    "    ax.plot(pt.x, pt.y, '-.')\n",
     "    \n",
-    "\n",
     "# print(xs)\n",
     "# print(ys)\n",
     "    \n",
@@ -218,18 +217,24 @@
    },
    "outputs": [],
    "source": [
+    "all_nodes = []\n",
+    "\n",
     "root_rot = Transform.rotation(deg=90)\n",
     "root_offset = Transform.translation(Point(0.0, 0.0))\n",
     "root_transform = Transform.merge(root_offset, root_rot)\n",
     "root = Node(name=\"root\", offset_transform=root_transform)\n",
+    "all_nodes.append(root)\n",
+    "\n",
     "children = []\n",
     "children.extend(root.add_children(\"a\"))\n",
+    "all_nodes.extend(children)\n",
     "print(len(children))\n",
     "\n",
     "grand_children = []\n",
     "for i, child in enumerate(children):\n",
     "    prefix = f\"b{i}\"\n",
     "    grand_children.extend(child.add_children(prefix))\n",
+    "all_nodes.extend(grand_children)\n",
     "print(len(grand_children))\n",
     "\n",
     "if False:\n",
@@ -238,13 +243,46 @@
     "        prefix = f\"c{i}\"\n",
     "        great_grand_children.extend(child.add_children(prefix))\n",
     "    print(len(great_grand_children))\n",
-    "\n",
+    "    all_nodes.extend(great_grand_children)\n",
+    "    \n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "\n",
     "root.plot_recursive(ax)\n",
+    "\n",
+    "ax.axis('equal')\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "for node in all_nodes:\n",
+    "    # poincare coordinates\n",
+    "    xp, yp = get_poly_xy(node.polygon)\n",
+    "    \n",
+    "    # instead of the unit circle poincare disk, convert back into\n",
+    "    # hyperboloid coordinates\n",
+    "    # zh^2 - xh^2 - yh^2 = 1.0\n",
+    "    # zh^2 = 1.0 + xh^2 + yh^2\n",
+    "    # zh = sqrt(1.0 + xh^2 + yh^2)\n",
+    "    \n",
+    "    # convert to hyperboloid coords, solve for scalar a which projects\n",
+    "    # the poincare point back onto the hyperboloid\n",
+    "    # (xh, yh, zh) = (0, 0, -1) + a * (xp, yp, 1.0) \n",
+    "    # xh = a * xp\n",
+    "    # yh = a * yp\n",
+    "    # zh = a - 1.0\n",
+    "    # (a - 1.0)^2 = 1.0 + (a * xp)^2 + (a * yp)^2\n",
+    "    # a = 2.0 / (1 - xp^2 - yp^2)\n",
+    "    xp2 = np.multiply(xp, xp)\n",
+    "    yp2 = np.multiply(yp, yp)\n",
+    "    a = np.divide(2.0, 1.0 - xp2 - yp2)\n",
+    "    zh = a - 1.0\n",
+    "    xh = np.multiply(a, xp)\n",
+    "    yh = np.multiply(a, yp)\n",
+    "    \n",
+    "    # print zh * zh - \n",
+    "\n",
+    "    ax.plot(xh, yh)\n",
     "\n",
     "ax.axis('equal')\n",
     "\n",
