--- a/scripts/hyperbolic_test.ipynb
+++ b/scripts/hyperbolic_test.ipynb
@@ -21,12 +21,96 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "46f91247",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from hyperbolic.poincare import Point, Polygon, Transform\n",
+    "from poincare_plane import hyp_poly_edge_construct\n",
+    "from poincare_plane import construct_poly_vertices\n",
+    "\n",
+    "\n",
+    "p = 5\n",
+    "q = 4\n",
+    "radius = hyp_poly_edge_construct(p, q)\n",
+    "\n",
+    "print(radius)\n",
+    "\n",
+    "pts = construct_poly_vertices(p, q)\n",
+    "print(pts)\n",
+    "\n",
+    "def get_transform(x0, y0, x1, y1):\n",
+    "    transform = Transform.shift_origin(Point(x0, y0), Point(x1, y1))\n",
+    "    return transform\n",
+    "    # return Point(x0, y0), Point(x1, y1)\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "for i in range(5):\n",
+    "    fr = i * 0.2\n",
+    "    x0 = -0.1\n",
+    "    y0 = 0.0 + fr\n",
+    "    x1 = 0.1\n",
+    "    y1 = 0.0 + fr\n",
+    "    tr = get_transform(x0, y0, x1, y1)\n",
+    "    \n",
+    "    tr_pts = tr.apply_to_list(pts)\n",
+    "\n",
+    "    xs = [pt.x for pt in tr_pts]\n",
+    "    xs.append(xs[0])\n",
+    "    ys = [pt.y for pt in tr_pts]\n",
+    "    ys.append(ys[0])\n",
+    "    ax.plot(xs, ys)\n",
+    "    \n",
+    "    ax.plot([x0, x1], [y0, y1], '-.', color=plt.gca().lines[-1].get_color())\n",
+    "\n",
+    "# angles = np.arange(0, 2.0 * np.pi, 0.05)\n",
+    "# xs = [radius * math.cos(rad) for rad in angles]\n",
+    "# ys = [radius * math.sin(rad) for rad in angles]\n",
+    "# ax.plot(xs, ys)\n",
+    "\n",
+    "ax.axis('equal')\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "for i in range(5):\n",
+    "    fr = i * 0.2\n",
+    "    for j in range(5):\n",
+    "        sc = 1.0 + j * 0.2\n",
+    "        x0 = 0.0\n",
+    "        y0 = 0.0  # -0.1 * sc + fr\n",
+    "        x1 = 0.0\n",
+    "        y1 = 0.1 * sc + fr\n",
+    "        tr = get_transform(x0, y0, x1, y1)\n",
+    "\n",
+    "        tr_pts = tr.apply_to_list(pts)\n",
+    "\n",
+    "        xs = [pt.x for pt in tr_pts]\n",
+    "        xs.append(xs[0])\n",
+    "        ys = [pt.y for pt in tr_pts]\n",
+    "        ys.append(ys[0])\n",
+    "        ax.plot(xs, ys)\n",
+    "\n",
+    "        ax.plot([x0, x1], [y0, y1], '-.', color=plt.gca().lines[-1].get_color())\n",
+    "\n",
+    "# angles = np.arange(0, 2.0 * np.pi, 0.05)\n",
+    "# xs = [radius * math.cos(rad) for rad in angles]\n",
+    "# ys = [radius * math.sin(rad) for rad in angles]\n",
+    "# ax.plot(xs, ys)\n",
+    "\n",
+    "ax.axis('equal')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "56028ee1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from poincare_plane import hyp_poly_edge_construct\n",
-    "\n",
     "p = 5\n",
     "corner_deg = 90\n",
     "q = 360 / corner_deg\n",
@@ -66,8 +150,6 @@
    },
    "outputs": [],
    "source": [
-    "from poincare_plane import construct_poly_vertices\n",
-    "\n",
     "def draw_poly(d, poly, color=\"#ffffff\"):\n",
     "    d.draw(poly, fill=color, opacity=0.25)\n",
     "    d.draw(poly, hwidth=(0.0,0.05), fill='blue')\n",
@@ -217,34 +299,20 @@
    },
    "outputs": [],
    "source": [
+    "from hyperbolic.poincare import Point, Transform\n",
+    "from poincare_plane import get_poly_xy, make_node_tree, Node\n",
+    "\n",
     "all_nodes = []\n",
+    "\n",
+    "root = Node(name=\"root\")\n",
+    "all_nodes = make_node_tree(root, levels=2)\n",
     "\n",
     "root_rot = Transform.rotation(deg=90)\n",
     "root_offset = Transform.translation(Point(0.0, 0.0))\n",
     "root_transform = Transform.merge(root_offset, root_rot)\n",
-    "root = Node(name=\"root\", offset_transform=root_transform)\n",
-    "all_nodes.append(root)\n",
     "\n",
-    "children = []\n",
-    "children.extend(root.add_children(\"a\"))\n",
-    "all_nodes.extend(children)\n",
-    "print(len(children))\n",
+    "root.set_transform(offset_transform=root_transform)\n",
     "\n",
-    "grand_children = []\n",
-    "for i, child in enumerate(children):\n",
-    "    prefix = f\"b{i}\"\n",
-    "    grand_children.extend(child.add_children(prefix))\n",
-    "all_nodes.extend(grand_children)\n",
-    "print(len(grand_children))\n",
-    "\n",
-    "if False:\n",
-    "    great_grand_children = []\n",
-    "    for i, child in enumerate(grand_children):\n",
-    "        prefix = f\"c{i}\"\n",
-    "        great_grand_children.extend(child.add_children(prefix))\n",
-    "    print(len(great_grand_children))\n",
-    "    all_nodes.extend(great_grand_children)\n",
-    "    \n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
@@ -256,33 +324,7 @@
     "\n",
     "fig, ax = plt.subplots()\n",
     "for node in all_nodes:\n",
-    "    # poincare coordinates\n",
-    "    xp, yp = get_poly_xy(node.polygon)\n",
-    "    \n",
-    "    # instead of the unit circle poincare disk, convert back into\n",
-    "    # hyperboloid coordinates\n",
-    "    # zh^2 - xh^2 - yh^2 = 1.0\n",
-    "    # zh^2 = 1.0 + xh^2 + yh^2\n",
-    "    # zh = sqrt(1.0 + xh^2 + yh^2)\n",
-    "    \n",
-    "    # convert to hyperboloid coords, solve for scalar a which projects\n",
-    "    # the poincare point back onto the hyperboloid\n",
-    "    # (xh, yh, zh) = (0, 0, -1) + a * (xp, yp, 1.0) \n",
-    "    # xh = a * xp\n",
-    "    # yh = a * yp\n",
-    "    # zh = a - 1.0\n",
-    "    # (a - 1.0)^2 = 1.0 + (a * xp)^2 + (a * yp)^2\n",
-    "    # a = 2.0 / (1 - xp^2 - yp^2)\n",
-    "    xp2 = np.multiply(xp, xp)\n",
-    "    yp2 = np.multiply(yp, yp)\n",
-    "    a = np.divide(2.0, 1.0 - xp2 - yp2)\n",
-    "    zh = a - 1.0\n",
-    "    xh = np.multiply(a, xp)\n",
-    "    yh = np.multiply(a, yp)\n",
-    "    \n",
-    "    # print zh * zh - \n",
-    "\n",
-    "    ax.plot(xh, yh)\n",
+    "    ax.plot(node.xh, node.yh)\n",
     "\n",
     "ax.axis('equal')\n",
     "\n",
@@ -299,6 +341,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a0aafcfa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffed9c75",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1cf31d2b",
    "metadata": {},
    "outputs": [],
    "source": []
